# webtools

./: .env.example  .gitignore  CHANGELOG.md  DEEP_RESEARCH_ARCHITECTURE.md  DEPLOYMENT_SUCCESS.md  GETTING_STARTED.md  LICENSE  Makefile  PUSH_GUIDE.md  README.md  USE_CASES.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  manager.py
app/agents/: intelligent_orchestrator.py  research_agent.py  site_search_agent.py  smart_search_agent.py
app/api/: models.py
app/api/v1/endpoints/: extract.py  research.py  research_deep.py  search_site.py  vision.py
app/core/: config.py  content_cleaner.py  data_extractor.py  execution_tracer.py  output_formatter.py  source_registry.py
app/core/browser/: __init__.py  playwright_manager.py
app/core/llm/: __init__.py  albert.py  anthropic.py  base.py  factory.py  openai.py
app/extractors/: __init__.py  agent_extractor.py  base.py  direct_extractor.py
app/services/: __init__.py  search_service.py
app/utils/: content_detector.py  prompts.py
docker/: .dockerignore  Dockerfile
tests/: __init__.py  test_basic.py
